--- a/design/default.css
+++ b/design/default.css
@@ -30,4 +30,14 @@ header #logo {
 
 h1 {
   color: white;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 2.9em;
+}
+
+h2 {
+  color: white;
+  text-align: center;
+  font-weight: 500;
 }
